--- a/page3.html
+++ b/page3.html
@@ -51,9 +51,27 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><strong>敲敲木工坊</strong></a><div class="dropdown-menu" aria-labelledby="dropdown-233"><a class="text-white show dropdown-item text-primary display-4" href="page1.html#gallery6-11"><strong>敲敲木工坊</strong></a><a class="text-white show dropdown-item text-primary display-4" href="page1.html#gallery3-1f"><strong>背景故事</strong></a><a class="text-white show dropdown-item text-primary display-4" href="page1.html#features16-o"><strong>手作介紹</strong></a><a class="text-white show dropdown-item text-primary display-4" href="page1.html#gallery6-19"><strong>DIY照片欣賞</strong></a><a class="text-white show dropdown-item text-primary display-4" href="page1.html#map1-14"><strong>地理位置</strong></a></div></li>
-                    <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-white display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><strong>妮娜巧克力夢想城堡</strong></a><div class="dropdown-menu" aria-labelledby="dropdown-154"><a class="dropdown-item text-white text-primary display-4" href="page2.html#gallery6-10"><strong>妮娜巧克力夢想城堡</strong></a><a class="dropdown-item text-white text-primary display-4" href="page2.html#gallery3-1j"><strong>背景故事</strong></a><a class="dropdown-item text-white text-primary display-4" href="page2.html#features17-l"><strong>手作介紹</strong></a><a class="dropdown-item text-white text-primary display-4" href="page2.html#gallery6-1b"><strong>DIY照片欣賞</strong></a><a class="dropdown-item text-white text-primary display-4" href="page2.html#map1-15"><strong>地理位置</strong></a></div></li>
-                    <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-white display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><strong>水里蛇窯</strong></a><div class="dropdown-menu" aria-labelledby="dropdown-808"><a class="dropdown-item text-white text-primary display-4" href="page3.html#gallery6-12"><strong>水里蛇窯</strong></a><a class="dropdown-item text-white text-primary display-4" href="page3.html#gallery3-1k"><strong>背景故事</strong></a><a class="dropdown-item text-white text-primary display-4" href="page3.html#features16-s"><strong>手作介紹</strong></a><a class="dropdown-item text-white text-primary display-4" href="page3.html#gallery6-1d"><strong>DIY照片欣賞</strong></a><a class="dropdown-item text-white text-primary display-4" href="page3.html#map1-16"><strong>地理位置</strong></a></div>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown">
+                    <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><strong>敲敲木工坊</strong></a><div class="dropdown-menu" aria-labelledby="dropdown-233">
+                        <a class="text-white show dropdown-item text-primary display-4" href="page1.html#gallery6-11" style="background-color: #9c958a;"><strong>敲敲木工坊</strong></a>
+                        <a class="text-white show dropdown-item text-primary display-4" href="page1.html#gallery3-1f" style="background-color: #9c958a;"><strong>背景故事</strong></a>
+                        <a class="text-white show dropdown-item text-primary display-4" href="page1.html#features16-o" style="background-color: #9c958a;"><strong>手作介紹</strong></a>
+                        <a class="text-white show dropdown-item text-primary display-4" href="page1.html#gallery6-19" style="background-color: #9c958a;"><strong>DIY照片欣賞</strong></a>
+                        <a class="text-white show dropdown-item text-primary display-4" href="page1.html#map1-14" style="background-color: #9c958a;"><strong>地理位置</strong></a></div></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link link dropdown-toggle text-white display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><strong>妮娜巧克力夢想城堡</strong></a><div class="dropdown-menu" aria-labelledby="dropdown-154">
+                        <a class="dropdown-item text-white text-primary display-4" href="page2.html#gallery6-10" style="background-color: #9c958a;"><strong>妮娜巧克力夢想城堡</strong></a>
+                        <a class="dropdown-item text-white text-primary display-4" href="page2.html#gallery3-1j" style="background-color: #9c958a;"><strong>背景故事</strong></a>
+                        <a class="dropdown-item text-white text-primary display-4" href="page2.html#features17-l" style="background-color: #9c958a;"><strong>手作介紹</strong></a>
+                        <a class="dropdown-item text-white text-primary display-4" href="page2.html#gallery6-1b" style="background-color: #9c958a;"><strong>DIY照片欣賞</strong></a>
+                        <a class="dropdown-item text-white text-primary display-4" href="page2.html#map1-15" style="background-color: #9c958a;"><strong>地理位置</strong></a></div></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link link dropdown-toggle text-white display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><strong>水里蛇窯</strong></a><div class="dropdown-menu" aria-labelledby="dropdown-808">
+                            <a class="dropdown-item text-white text-primary display-4" href="page3.html#gallery6-12" style="background-color: #9c958a;"><strong>水里蛇窯</strong></a>
+                            <a class="dropdown-item text-white text-primary display-4" href="page3.html#gallery3-1k" style="background-color: #9c958a;"><strong>背景故事</strong></a>
+                            <a class="dropdown-item text-white text-primary display-4" href="page3.html#features16-s" style="background-color: #9c958a;"><strong>手作介紹</strong></a>
+                            <a class="dropdown-item text-white text-primary display-4" href="page3.html#gallery6-1d" style="background-color: #9c958a;"><strong>DIY照片欣賞</strong></a>
+                            <a class="dropdown-item text-white text-primary display-4" href="page3.html#map1-16" style="background-color: #9c958a;"><strong>地理位置</strong></a></div>
                     </li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="index.html#gallery6-13">
                     <strong>專題團隊</strong></a></li></ul>
             </div>
@@ -438,7 +456,7 @@
             
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                    © Copyright 2023&nbsp;</p>
+                    © Copyright 2023 靜宜大學 觀光四B&nbsp;</p>
             </div>
         </div>
     </div>
